--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 
 <body class="bg-zinc-800">
 
-    <div class="flex justify-center items-center w-screen h-screen">
-        <div class="flex justify-center items-center scale-150">
+    <div class="flex justify-center items-center w-screen h-screen"> //This outer div is unnecessary actually, added just to amount for
+        <div class="flex justify-center items-center scale-150">                                               for the scale-150 class
             <div class="w-56 h-56 rounded-full bg-black flex justify-center items-center">
                 <div class="w-36 h-36 rounded-full bg-yellow-400 flex justify-center items-center ">
                     <div class="w-16 h-16 rounded-full bg-red-800"></div>
